--- a/backend-api/config/database.yml
+++ b/backend-api/config/database.yml
@@ -23,7 +23,9 @@ default: &default
 
 development:
   <<: *default
-  database: backend_api_development
+  database: postgres
+  username: postgres
+  password: Johnny22
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -32,12 +34,12 @@ development:
   #username: backend_api
 
   # The password associated with the postgres role (username).
-  #password:
+  # password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  # host: ''
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
